--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="cursor.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,7 +15,7 @@
   </head>
   <body>
     <div class="bodycontainer">
-      <div class="crsr">👦</div>
+      <!-- <div class="crsr">👦</div> -->
       <div class="nav">
         <div class="name">
           <h4><b>O</b>m <b>P</b>rakash <b>S</b>ahoo</h4>
