--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       rel="stylesheet"
     />
     <title>OPS</title>
+    <!-- SEO Settings -->
+    <meta
+      name="google-site-verification"
+      content="I4wKcL7eVkFh88zqySutGGIOVAn0phPft_bc7iq8P8M"
+    />
   </head>
   <body>
     <div class="bodycontainer">
