--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
       name="google-site-verification"
       content="I4wKcL7eVkFh88zqySutGGIOVAn0phPft_bc7iq8P8M"
     />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Person",
+        "name": "Om Prakash Sahoo",
+        "url": "https://opsahoo.netlify.app/",
+        "image": "https://opsahoo.netlify.app/profile-pic.png",
+        "sameAs": [
+          "https://www.instagram.com/opsahoo08/",
+          "https://github.com/schoolop08",
+          "https://opsahoo.netlify.app/"
+        ],
+        "jobTitle": "Student Web Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "ASOSE, Sector 11, Rohini, Delhi"
+        }
+      }
+    </script>
   </head>
   <body>
     <div class="bodycontainer">
