--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
     />
     <script type="application/ld+json">
       {
-        "@context": "https://schema.org/",
+        "@context": "https://schema.org",
         "@type": "Person",
-        "name": "Om Prakash Sahoo",
+        "@id": "#Person",
         "url": "https://opsahoo.netlify.app/",
+        "name": "Om Prakash Sahoo",
+        "description": "Om Prakash Sahoo is a student web developer from Delhi, India, skilled in HTML, CSS, JavaScript, TailwindCSS, and GSAP. He creates modern, dynamic websites and tools like a Pomodoro timer.",
         "image": "https://opsahoo.netlify.app/profile-pic.png",
+        "email": "opsahoo08@gmail.com",
         "sameAs": [
           "https://www.instagram.com/opsahoo08/",
           "https://github.com/schoolop08",
@@ -31,9 +34,34 @@
         ],
         "jobTitle": "Student Web Developer",
         "worksFor": {
-          "@type": "Organization",
+          "@type": "EducationalOrganization",
           "name": "ASOSE, Sector 11, Rohini, Delhi"
-        }
+        },
+        "alumniOf": {
+          "@type": "EducationalOrganization",
+          "name": "ASOSE, Sector 11, Rohini, Delhi"
+        },
+        "knowsAbout": [
+          "Web Development",
+          "HTML",
+          "CSS",
+          "JavaScript",
+          "TailwindCSS",
+          "GSAP",
+          "Frontend Design",
+          "Responsive Web Design"
+        ],
+        "nationality": "Indian",
+        "birthPlace": "Delhi, India",
+        "gender": "Male",
+        "subjectOf": [
+          {
+            "@type": "CreativeWork",
+            "name": "Pomodoro Timer",
+            "url": "https://opsahoo.netlify.app/pomodoro.html",
+            "description": "A productivity tool implementing the Pomodoro technique."
+          }
+        ]
       }
     </script>
   </head>
